Fundamentals hands on